--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy CRA to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   workflow_dispatch:
 
 permissions:
@@ -11,8 +11,8 @@ permissions:
   id-token: write
 
 concurrency:
-  group: pages
-  cancel-in-progress: true
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build:
@@ -24,7 +24,9 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          # Recomendado para CRA 5
+          node-version: 18
+          cache: "npm"
 
       - name: Install deps
         run: npm ci
@@ -33,11 +35,13 @@ jobs:
         run: npm run build
         env:
           CI: false
+          # 👇 asegura rutas correctas bajo /calculadora-condenas/
+          PUBLIC_URL: /calculadora-condenas
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: build
+          path: ./build
 
   deploy:
     needs: build
